{
    "version": 1,
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Swipe",
            "id": "6edeb07b-a654-4a02-808c-45e09078747b",
            "actions": [
                {
                    "name": "PointerPress",
                    "type": "Button",
                    "id": "445488cf-989a-49d2-bb1e-6a8d3104e1f1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PointerDirector",
                    "type": "Value",
                    "id": "f29a27b0-d6b0-4220-bf7c-1208ddc2259d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "718d6365-f390-4daf-8ef3-96cbb2ac508a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0e385ea4-15bb-49b6-aedd-aa6a59353ace",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerDirector",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}